<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.api</groupId>
	<artifactId>shoppinglist</artifactId>
	<version>0.0.10-SNAPSHOT</version>
	<name>Shopping List</name>
	<description>Backend API for a shopping list</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
<!--		<servlet.port>8080</servlet.port>-->
<!--		<jetty.stop.port>9001</jetty.stop.port>-->
<!--		<spring.version>5.1.3.RELEASE</spring.version>-->
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.plugin.version>3.0.0-M7</maven.plugin.version>
<!--		<junit5.version>5.8.1</junit5.version>-->
<!--		<mockito.version>4.0.0</mockito.version>-->
	</properties>
	<dependencies>
<!--		<dependency>-->
<!--			<groupId>javax.annotation</groupId>-->
<!--			<artifactId>javax.annotation-api</artifactId>-->
<!--			<version>1.3.2</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->

		<!-- Spring core & mvc TODO Maven Learning: Look at the Dependency Hierarchy and see what dependencies are being duplicated (spring-context or spring-webmvc?) -->
<!--		<dependency>-->
<!--			<groupId>org.springframework</groupId>-->
<!--			<artifactId>spring-context</artifactId>-->
<!--			<version>${spring.version}</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework</groupId>-->
<!--			<artifactId>spring-webmvc</artifactId>-->
<!--			<version>${spring.version}</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework</groupId>-->
<!--			<artifactId>spring-test</artifactId>-->
<!--			<version>${spring.version}</version>-->
<!--			<type>jar</type>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

		<!-- Servlet Specs enhance jsp and tag intellisense-->
		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
<!--		<dependency>-->
<!--			<groupId>javax.servlet</groupId>-->
<!--			<artifactId>javax.servlet-api</artifactId>-->
<!--			<version>4.0.1</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>javax.servlet.jsp</groupId>-->
<!--			<artifactId>javax.servlet.jsp-api</artifactId>-->
<!--			<version>2.3.3</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>javax.servlet</groupId>-->
<!--			<artifactId>jstl</artifactId>-->
<!--			<version>1.2</version>-->
<!--		</dependency>-->

		<!-- JSR-330 for @Inject -->
<!--		<dependency>-->
<!--			<groupId>javax.inject</groupId>-->
<!--			<artifactId>javax.inject</artifactId>-->
<!--			<version>1</version>-->
<!--		</dependency>-->

		<!-- Jackson JSON Mapper -->
<!--		<dependency>-->
<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
<!--			<artifactId>jackson-databind</artifactId>-->
<!--			<version>2.9.8</version>-->
<!--		</dependency>-->

		<!--Predecessor to the logging upgrade to slf4j-->
<!--		<dependency>-->
<!--			<groupId>log4j</groupId>-->
<!--			<artifactId>log4j</artifactId>-->
<!--			<version>1.2.14</version>-->
<!--			<scope>runtime</scope>-->
<!--		</dependency>-->

		<!-- Already included in starter parent-->

		<!-- junit 5 -->
		<!--		<dependency>-->
		<!--			<groupId>org.junit.jupiter</groupId>-->
		<!--			<artifactId>junit-jupiter</artifactId>-->
		<!--			<version>${junit5.version}</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->

		<!-- JUnit Compatibility for IDE test tooling -->
		<!--		<dependency>-->
		<!--			<groupId>org.junit.platform</groupId>-->
		<!--			<artifactId>junit-platform-runner</artifactId>-->
		<!--			<version>1.2.0</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->
		<!--		<dependency>-->
		<!--			<groupId>org.junit.vintage</groupId>-->
		<!--			<artifactId>junit-vintage-engine</artifactId>-->
		<!--			<version>${junit5.version}</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->

		<!--		<dependency>-->
		<!--			<groupId>org.mockito</groupId>-->
		<!--			<artifactId>mockito-core</artifactId>-->
		<!--			<version>${mockito.version}</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->

		<!--  mockito extensions for Junit5 -->
		<!--		<dependency>-->
		<!--			<groupId>org.mockito</groupId>-->
		<!--			<artifactId>mockito-junit-jupiter</artifactId>-->
		<!--			<version>${mockito.version}</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->


		<!-- Core dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.wimdeblauwe</groupId>
			<artifactId>htmx-spring-boot</artifactId>
			<version>3.4.1</version>
		</dependency>
		<!--Duplicate. Already introduced by htmx-import-->
<!--		<dependency>-->
<!--			<groupId>io.github.wimdeblauwe</groupId>-->
<!--			<artifactId>htmx-spring-boot-thymeleaf</artifactId>-->
<!--			<version>3.4.1</version>-->
<!--		</dependency>-->
		<!--Required for converting strings to html views-->
		<!--Example return "index" returns an index.html page-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Database https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.3.232</version>
		</dependency>


		<!-- Logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.23.1</version>
			<scope>test</scope>
		</dependency>


		<!-- Commons Upload for File upload -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.4</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- Google Guava: https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>30.1.1-jre</version>
		</dependency>

	</dependencies>



	<build>
		<finalName>${project.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.eclipse.jetty</groupId>-->
<!--				<artifactId>jetty-maven-plugin</artifactId>-->
<!--				<version>9.4.14.v20181114</version>-->
<!--				<configuration>-->
<!--					<supportedPackagings>jar</supportedPackagings>-->
<!--					<httpConnector>-->
<!--						<port>${servlet.port}</port>-->
<!--					</httpConnector>-->
<!--					<stopKey>quit</stopKey>-->
<!--					<stopPort>${jetty.stop.port}</stopPort>-->
<!--					<webApp>-->
<!--						<contextPath>/</contextPath>-->
<!--					</webApp>-->
<!--					<scanIntervalSeconds>5</scanIntervalSeconds>-->
<!--					<scanTargetPatterns>-->
<!--						<scanTargetPattern>-->
<!--							<directory>src/main/webapp/WEB-INF</directory>-->
<!--							<includes>-->
<!--								<include>**/*.html</include>-->
<!--							</includes>-->
<!--							<excludes>-->
<!--								<include>**/*.properties</include>-->
<!--							</excludes>-->
<!--						</scanTargetPattern>-->
<!--					</scanTargetPatterns>-->
<!--				</configuration>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>start-it</id>-->
<!--						<phase>pre-integration-test</phase>-->
<!--						<goals>-->
<!--							<goal>start</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<scanIntervalSeconds>0</scanIntervalSeconds>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--					<execution>-->
<!--						<id>stop-it</id>-->
<!--						<phase>post-integration-test</phase>-->
<!--						<goals>-->
<!--							<goal>stop</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-surefire-plugin</artifactId>-->
<!--				<version>${maven.plugin.version}</version>-->
<!--				<configuration>-->
<!--					<testFailureIgnore>true</testFailureIgnore>-->
<!--				</configuration>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-failsafe-plugin</artifactId>-->
<!--				<version>${maven.plugin.version}</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>perform-it</id>-->
<!--						<goals>-->
<!--							<goal>integration-test</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<systemProperties>-->
<!--								<property>-->
<!--									<name>servlet.port</name>-->
<!--									<value>${servlet.port}</value>-->
<!--								</property>-->
<!--								<property>-->
<!--									<name>name</name>-->
<!--									<value>${project.name}</value>-->
<!--								</property>-->
<!--							</systemProperties>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--					<execution>-->
<!--						<id>verify-it</id>-->
<!--						<goals>-->
<!--							<goal>verify</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
		</plugins>
	</build>

</project>
